--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
+  gap: 12px;
 }
 
 #info-image {
@@ -142,5 +142,38 @@ a {
 .finish-container {
   display: flex;
   height: 300px;
-  border: 2px solid rgb(190, 9, 9);
+
+  justify-content: center;
+  align-items: center;
+  background-color: #e5e7eb;
+}
+
+.finish-text {
+  display: flex;
+
+  height: 200px;
+  width: 700px;
+  padding: 0;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-bottom: 20px;
+}
+.lorem {
+  display: flex;
+  color: #737373;
+  font-size: 32px;
+  font-style: italic;
+  font-family: Roboto, sans-serif;
+  margin: 0;
+  padding-bottom: 20px;
+  font-weight: 100;
+}
+
+.author {
+  display: flex;
+  align-self: flex-end;
+  font-weight: bold;
+  font-family: "Roboto Rounded", sans-serif;
+  font-size: 24px;
+  color: #1f2937;
 }
