--- a/styles.css
+++ b/styles.css
@@ -142,15 +142,13 @@ a {
 .finish-container {
   display: flex;
   height: 300px;
-
   justify-content: center;
   align-items: center;
   background-color: #e5e7eb;
 }
 
-.finish-text {
+.finish-text-container {
   display: flex;
-
   height: 200px;
   width: 700px;
   padding: 0;
@@ -176,4 +174,61 @@ a {
   font-family: "Roboto Rounded", sans-serif;
   font-size: 24px;
   color: #1f2937;
+}
+
+.sign-in {
+  display: flex;
+  height: 280px;
+  justify-content: center;
+  align-items: center;
+}
+
+.sign-in-container {
+  display: flex;
+  background-color: #3882f6;
+  height: 130px;
+  width: 700px;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0;
+  margin: 0;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+}
+
+.maintext {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  align-items: flex-start;
+  justify-content: center;
+  height: 100%;
+  gap: 4px;
+}
+
+.sign-in-main {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto Rounded", sans-serif;
+  font-size: 24px;
+  color: white;
+}
+
+.sign-in-secondary {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
+  color: #e5e5e5;
+}
+
+#second-button {
+  height: 30px;
+  width: 100px;
+  background-color: #3882f6;
+  border: 2px solid white;
+  border-radius: 8px;
+  font-family: Roboto;
+  font-weight: 700;
+  color: white;
 }
